--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <div class="container">
             <div class="social">
                 <a href="https://www.facebook.com/hyfyphoto/" target="_blank">facebook </a>
-                <a href="https://www.flickr.com/photos/150290140@N04/">flicker </a>
+                <a href="https://www.flickr.com/photos/150290140@N04/">flickr </a>
                 <a href="https://www.instagram.com/_hyfy_/" target="_blank">instagram </a>
                 <a href="mailto:mahirsufian@gmail.com">email </a>
             </div>
