--- a/about.html
+++ b/about.html
@@ -57,9 +57,9 @@
                     <p>My name is <b>Mahir Sufian</b> and I am currently a senior at Rutgers University and will be attending medical school next year at New Jersey Medical School. 
                         
                     <br>
-                        Photography is my greatest passion: it is my hobby, my stress relief, my art, and my work. While I enjoy exploring the world with and through my camera lens, I want to share that experience with you. I am experienced in event photography, portraits, and landscapes. I also have extensive experience in post processing techniques with Adobe Lightroom and Photoshop. Most importantly, my desire is to see that my clients are as excited about their results as I am about the process. Allow me to share my creative expression with you to make your visions a reality. Contact me through Facebook, Instagram, or Email for prints and bookings.
+                        Photography is my greatest passion: it is my hobby, my stress relief, my art, and my work. While I enjoy exploring the world with and through my camera lens, I want to share that experience with you. I am experienced in event photography, portraits, and landscapes. I also have extensive experience in post processing techniques with Adobe Lightroom and Photoshop. Most importantly, my desire is to see that my clients are as excited about their results as I am about the process. Allow me to share my creative expression with you to make your visions a reality. 
                     <br>
-                        Contact me through Facebook, Instagram, or Email for prints and bookings.
+                        Contact me through <a href="https://www.facebook.com/hyfyphoto/" target="_blank"> <b>Facebook,</b> </a> <a href="https://www.instagram.com/_hyfy_/" target="_blank"><b>Instagram,</b> </a> or <a href="mailto:mahirsufian@gmail.com"><b>Email</b> </a> for prints and bookings!
                 </div>
                 
                 <!-- work areas -->
@@ -73,7 +73,7 @@
         <div class="container">
             <div class="social">
                 <a href="https://www.facebook.com/hyfyphoto/" target="_blank">facebook </a>
-                <a href="https://www.flickr.com/photos/150290140@N04/">flickr </a>
+                <a href="https://www.flickr.com/photos/150290140@N04/" target="_blank">flickr </a>
                 <a href="https://www.instagram.com/_hyfy_/" target="_blank">instagram </a>
                 <a href="mailto:mahirsufian@gmail.com">email </a>
             </div>
