--- a/about.html
+++ b/about.html
@@ -32,14 +32,14 @@
                 </div>
                 <div class="responsive"><i data-icon="=" class="icon"></i></div>
                 <ul class="nav-menu">
-                    <li><a href="home.html" class="smoothScroll">Home</a></li>
-                    <li><a href="index.html" class="smoothScroll">Portfolio</a></li>
+                    <li><a href="index.html" class="smoothScroll">Home</a></li>
+                    <li><a href="portfolio.html" class="smoothScroll">Portfolio</a></li>
                     <li><a href="#" class="smoothScroll">About</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-     <section class="about dgray-bg" id="about">
+     <section class="about " id="about">
         <div class="about type-1 padbot_120">
             <div class="container">
                 <!-- about image -->
