--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         <div class="row">
             <div class="container">
                 <div class="logo">
-                    <a href="home.html"><img src="img/logo.png" alt=""></a>
+                    <a href="index.html"><img src="img/logo.png" alt=""></a>
                 </div>
                 <div class="responsive"><i data-icon="=" class="icon"></i></div>
                 <ul class="nav-menu">
