--- a/about.html
+++ b/about.html
@@ -39,25 +39,26 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown-7">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link" href="index.html">HOME</a>
                         </li>
                 
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="gallery.html" id="navbarDropdownMenuLink-7"
                                data-toggle="dropdown" aria-haspopup="true"
                                aria-expanded="false">
-                                Gallery
+                                GALLERY
                                 
                                 <span class="sr-only">(current)</span>
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink-7">
+                                <a class="dropdown-item" href="gallery.html">Main</a>
                                 <a class="dropdown-item" href="people.html">People</a>
                                 <a class="dropdown-item" href="places.html">Places</a>
                                 <a class="dropdown-item" href="power.html">Power</a>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="about.html">About</a>
+                            <a class="nav-link active" href="about.html">ABOUT</a>
                         </li>
                     </ul>
                 </div>
@@ -100,7 +101,7 @@
                 <a href="https://www.instagram.com/_hyfy_/" target="_blank">instagram </a>
                 <a href="mailto:mahirsufian@gmail.com">email </a>
             </div>
-            <p>Copyright © 2018 HYFY, All rights Reserved. </p>
+            <p>Copyright © 2018 HYFY, All Rights Reserved. </p>
         </div>
     </footer>
 
