--- a/gallery.html
+++ b/gallery.html
@@ -22,25 +22,27 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown-7">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link" href="index.html">HOME</a>
                         </li>
                 
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle active" href="https://designrevision.com" id="navbarDropdownMenuLink-7"
+                        <li class="nav-item dropdown active">
+                            <a class="nav-link dropdown-toggle" href="https://designrevision.com" id="navbarDropdownMenuLink-7"
                                data-toggle="dropdown" aria-haspopup="true"
                                aria-expanded="false">
-                                Gallery
+                                GALLERY
                                 
                                 <span class="sr-only">(current)</span>
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink-7">
+                                <a class="dropdown-item" href="gallery.html">Main</a>
                                 <a class="dropdown-item" href="people.html">People</a>
                                 <a class="dropdown-item" href="places.html">Places</a>
                                 <a class="dropdown-item" href="power.html">Power</a>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link" href="about.html">ABOUT</a>
+                        </li>
                         </li>
                     </ul>
                 </div>
@@ -49,9 +51,8 @@
     <div id="extras" class="mb-5 py-5">
         <div class="section-title container ml-auto mr-auto">
             <div class="col-lg-8 col-md-10 ml-auto mr-auto mb-5">
-                <h1 class="mb-2 text-center">Gallery</h1>
+                <h1 class="mb-2 text-center">GALLERY</h1>
                 <h3 class="mb-4 text-center"></h3>
-                <p class="text-center">These are some of the photos I took throughout my journey </p>
             </div>
         </div>
         <div class="container">
@@ -60,7 +61,7 @@
                 <!-- Extra: App Landing Page -->
                 <div class="col-md-4 mb-4 ml-auto ">
                     <div class="card">
-                        <img class="card-img-top" src="images/demo/aveB-1.jpg"
+                        <img class="card-img-top" src="images/demo/HYFY-54c.jpg"
                              alt="Shards App Promo - Demo Landing Page">
                         <div class="y py-3">
                             <h6 class="text-center text-muted m-0">People</h6>
@@ -87,7 +88,7 @@
                 <!-- Extra: Agency Landing Page -->
                 <div class="col-md-4 mb-4 ml-auto">
                     <div class="card">
-                        <img class="card-img-top" src="images/demo/HYFY-53.jpg">
+                        <img class="card-img-top" src="images/demo/HYFY-53c.jpg">
                         <div class="card-body py-3">
                             <h6 class="text-center text-muted m-0">Power</h6>
                         </div>
