--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 
 <html>
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113301544-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-113301544-1');
+</script>
+
   <link rel="stylesheet" type="text/css" href="cssa/homepage_ui.css">
 <link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates:300,400,500,600,700" rel="stylesheet">
     <title>HYFY</title>
