--- a/people.html
+++ b/people.html
@@ -1,5 +1,15 @@
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113301544-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-113301544-1');
+</script>
+
 <title>HYFY</title>
 <meta charset="UTF-8">
 <meta name="description" content="Berlin Portfolio Template">
