--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
                     <p>My name is <b>Mahir Sufian</b> and I am currently a senior at Rutgers University and will be attending medical school next year at New Jersey Medical School. 
                         
                     <br>
-                        Photography is my biggest passion: it is my hobby, my stress relief, my art, and my work. While I enjoy exploring the world with and through my camera lens, I want to share that experience with you. I am experienced in event photography, portraits, and landscapes. I also have extensive experience in post processing techniques with Adobe Lightroom and Photoshop. Most importantly, I want you be as excited by the results as I am by the process. So allow me to share my creative expression with you and help you make your vision a reality. 
+                        Photography is my biggest passion: it is my hobby, my stress relief, my art, and my work. While I enjoy exploring the world with and through my camera lens, I want to share that experience with you. I am experienced in event photography, portraits, and landscapes. I also have extensive experience in post processing techniques with Adobe Lightroom and Photoshop. Most importantly, I want you to be as excited by the results as I am by the process. So allow me to share my creative expression with you and help you make your vision a reality. 
                     <br>
                         Contact me through <a href="https://www.facebook.com/hyfyphoto/" target="_blank"> <b>Facebook,</b> </a> <a href="https://www.instagram.com/_hyfy_/" target="_blank"><b>Instagram,</b> </a> or <a href="mailto:mahirsufian@gmail.com"><b>Email</b> </a> for prints and bookings!
                 </div>
