--- a/places.html
+++ b/places.html
@@ -205,7 +205,7 @@
                 <a href="https://www.instagram.com/_hyfy_/" target="_blank">instagram </a>
                 <a href="mailto:mahirsufian@gmail.com">email </a>
             </div>
-            <p>Copyright © 2018 HYFY, All rights Reserved. </p>
+            <p>Copyright © 2018 HYFY, All Rights Reserved. </p>
         </div>
     </footer>
 
