--- a/power.html
+++ b/power.html
@@ -84,43 +84,80 @@
                     <div class="isotope_items row">
                        
                         <!-- Item -->
+                        <a href="images/power/HYFY-36.jpg" class="single_item link col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+                            <img src="images/power/HYFY-36.jpg" alt=""> 
+                        </a>
+                        <!-- Item -->
+                        <a href="images/power/HYFY-9.jpg" class="single_item link people col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+                            <img src="images/power/HYFY-9.jpg" alt=""> 
+                        </a>
+                        <!-- Item -->
+                        <a href="images/power/HYFY-73.jpg" class="single_item link power col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+                            <img src="images/power/HYFY-73.jpg" alt=""> 
+                        </a>
+                        <!-- Item -->
+                        <a href="images/power/HYFY-77.jpg" class="single_item link places col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+                            <img src="images/power/HYFY-77.jpg" alt=""> 
+                        </a>
+                        <!-- Item -->
+                        <a href="images/power/HYFY-78.jpg" class="single_item link places picks col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+                            <img src="images/power/HYFY-78.jpg" alt=""> 
+                        </a>
+                        <!-- Item -->
+                        <a href="images/power/HYFY-80.jpg" class="single_item link people col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+                            <img src="images/power/HYFY-80.jpg" alt=""> 
+                        </a>
+                        <!-- Item -->
+                        <a href="images/power/HYFY-5.jpg" class="single_item link col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+                            <img src="images/power/HYFY-5.jpg" alt=""> 
+                        </a>
+                        <!-- Item -->
                         <a href="images/power/HYFY-11.jpg" class="single_item link col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
                             <img src="images/power/HYFY-11.jpg" alt=""> 
                         </a>
                         <!-- Item -->
-                        <a href="images/power/HYFY-15.jpg" class="single_item link people col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
-                            <img src="images/power/HYFY-15.jpg" alt=""> 
+                        <a href="images/power/HYFY-67.jpg" class="single_item link col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+                            <img src="images/power/HYFY-67.jpg" alt=""> 
                         </a>
                         <!-- Item -->
-                        <a href="images/power/HYFY-36.jpg" class="single_item link power col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
-                            <img src="images/power/HYFY-36.jpg" alt=""> 
+                        <a href="images/power/HYFY-66.jpg" class="single_item link col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+                            <img src="images/power/HYFY-66.jpg" alt=""> 
                         </a>
-                        <!-- Item -->
-                        <a href="images/power/HYFY-45.jpg" class="single_item link places col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
-                            <img src="images/power/HYFY-45.jpg" alt=""> 
-                        </a>
-                        <!-- Item -->
-                        <a href="images/power/HYFY-5.jpg" class="single_item link places picks col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
-                            <img src="images/power/HYFY-5.jpg" alt=""> 
-                        </a>
-                        <!-- Item -->
-                        <a href="images/power/HYFY-52.jpg" class="single_item link people col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
-                            <img src="images/power/HYFY-52.jpg" alt=""> 
-                        </a>
-                        <!-- Item -->
+                         <!-- Item -->
                         <a href="images/power/HYFY-53.jpg" class="single_item link col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
                             <img src="images/power/HYFY-53.jpg" alt=""> 
                         </a>
+                         <!-- Item -->
+                        <a href="images/power/HYFY-69.jpg" class="single_item link col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+                            <img src="images/power/HYFY-69.jpg" alt=""> 
+                        </a>
+                         <!-- Item -->
+                        <a href="images/power/HYFY-61.jpg" class="single_item link col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+                            <img src="images/power/HYFY-61.jpg" alt=""> 
+                        </a>
+                         <!-- Item -->
+                        <a href="images/power/HYFY-45.jpg" class="single_item link col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+                            <img src="images/power/HYFY-45.jpg" alt=""> 
+                        </a>
+                         <!-- Item -->
+                        <a href="images/power/HYFY-72.jpg" class="single_item link col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+                            <img src="images/power/HYFY-72.jpg" alt=""> 
+                        </a>
+                          <!-- Item -->
+                        <a href="images/power/HYFY-52.jpg" class="single_item link col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+                            <img src="images/power/HYFY-52.jpg" alt=""> 
+                        </a>
                         <!-- Item -->
+                        <a href="images/power/HYFY-15.jpg" class="single_item link col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+                            <img src="images/power/HYFY-15.jpg" alt=""> 
+                        </a> 
+                        <!-- Item -->
+                        <a href="images/power/HYFY-76.jpg" class="single_item link col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
+                            <img src="images/power/HYFY-76.jpg" alt=""> 
+                        </a>
+                          <!-- Item -->
                         <a href="images/power/HYFY-7.jpg" class="single_item link col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
                             <img src="images/power/HYFY-7.jpg" alt=""> 
-                        </a>
-                        <!-- Item -->
-                        <a href="images/power/HYFY-9.jpg" class="single_item link col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
-                            <img src="images/power/HYFY-9.jpg" alt=""> 
-                        </a>
-                        <!-- Item -->
-                        
                         <!-- Item -->
                     </div>
                 </div>
@@ -134,7 +171,7 @@
                 <a href="https://www.instagram.com/_hyfy_/" target="_blank">instagram </a>
                 <a href="mailto:mahirsufian@gmail.com">email </a>
             </div>
-            <p>Copyright © 2018 HYFY, All rights Reserved. </p>
+            <p>Copyright © 2018 HYFY, All Rights Reserved. </p>
         </div>
     </footer>
 
