--- a/places.html
+++ b/places.html
@@ -10,7 +10,7 @@
   gtag('config', 'UA-113301544-1');
 </script>
 
-<title>HYFY</title>
+<title>Places</title>
 <meta charset="UTF-8">
 <meta name="description" content="Berlin Portfolio Template">
 <meta name="keywords" content="personal, portfolio">
